src/objects/OrderApi__GL_Account__c.object
<CustomObject>
    <description>GL Accounting codes used for linking debits and credits with the appropriate codes.</description>
    <fields>
        <fullName>Checkbook_ID__c</fullName>
        <description>Identifier between Great Plains and ECRM daily batching and reporting.</description>
        <inlineHelpText>Identifier between Great Plains and ECRM daily batching and reporting.</inlineHelpText>
        <label>Checkbook ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>Third 4 digits of the GL Account Full number (xxxx-xxx-XXXX-xxx)</description>
        <inlineHelpText>Third 4 digits of the GL Account Full number (xxxx-xxx-XXXX-xxx)</inlineHelpText>
        <label>Cost Center</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Distribution code?</description>
        <inlineHelpText>Is this a Distribution code?</inlineHelpText>
        <label>Distribution Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_GL_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The GL Code that this distribution maps to</description>
        <inlineHelpText>The GL Code that this distribution maps to</inlineHelpText>
        <label>Distribution GL Mapping</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_Title__c</fullName>
        <description>The full title of the code</description>
        <inlineHelpText>The full title of the code</inlineHelpText>
        <label>Distribution Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <description>Second 3 digits of the GL Account Full number (xxxx-XXX-xxxx-xxx)</description>
        <inlineHelpText>Second 3 digits of the GL Account Full number (xxxx-XXX-xxxx-xxx)</inlineHelpText>
        <label>Funding Source</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Full__c</fullName>
        <description>Full GL Account number (xxxx-xxx-xxxx-xxx)</description>
        <formula>Natural__c  &amp; &quot;-&quot; &amp; Funding_Source__c &amp; &quot;-&quot; &amp; Cost_Center__c &amp; &quot;-&quot; &amp;  Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full GL Account number (xxxx-xxx-xxxx-xxx)</inlineHelpText>
        <label>GL Account Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Natural__c</fullName>
        <description>First 4 digits of the GL Account Full number (XXXX-xxx-xxxx-xxx)</description>
        <inlineHelpText>First 4 digits of the GL Account Full number (XXXX-xxx-xxxx-xxx)</inlineHelpText>
        <label>Natural</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <description>**Required** Master-Detail Relationship to Business Group.</description>
        <inlineHelpText>**Required** Master-Detail Relationship to Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Chart of Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Detail__c</fullName>
        <description>Customize the detail pick-list to assist you in categorizing the GL Accounts in accounting reports.</description>
        <inlineHelpText>Customize the detail pick-list to assist you in categorizing the GL Accounts in accounting reports.</inlineHelpText>
        <label>Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OrderApi__Report_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable (A/P)</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable (A/R)</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Long-term Liabilities</fullName>
                </value>
                <value>
                    <fullName>Other Assets</fullName>
                </value>
                <value>
                    <fullName>Other Current Assets</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Other Expense</fullName>
                </value>
                <value>
                    <fullName>Contributions/Pledges Receivable</fullName>
                </value>
                <value>
                    <fullName>Other Receivables</fullName>
                </value>
                <value>
                    <fullName>Direct Contributions</fullName>
                </value>
                <value>
                    <fullName>Refunds Payable (R/P)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Report_Category__c</fullName>
        <description>**Do Not Modify Picklist Values** Select the appropriate report category for the GL Account.</description>
        <inlineHelpText>**Do Not Modify Picklist Values** Select the appropriate report category for the GL Account.</inlineHelpText>
        <label>Report Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                    <color>#0B6FCE</color>
                    <label>Balance Sheet</label>
                </value>
                <value>
                    <fullName>Income Statement</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                    <label>Income Statement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Type__c</fullName>
        <description>Select the appropriate type for the GL Account.</description>
        <inlineHelpText>Select the appropriate type for the GL Account.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OrderApi__Report_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Asset</fullName>
                    <color>#0B6FCE</color>
                    <label>Asset</label>
                </value>
                <value>
                    <fullName>Capital</fullName>
                    <color>#78C953</color>
                    <label>Capital</label>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                    <color>#E27001</color>
                    <label>Cost of Goods Sold</label>
                </value>
                <value>
                    <fullName>Equity</fullName>
                    <color>#A845DC</color>
                    <label>Equity</label>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                    <color>#F3D904</color>
                    <label>Expenses</label>
                </value>
                <value>
                    <fullName>Income</fullName>
                    <color>#A53711</color>
                    <label>Income</label>
                </value>
                <value>
                    <fullName>Liability</fullName>
                    <color>#66E9BD</color>
                    <label>Liability</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Last 3 digits of the GL Account Full number (xxxx-xxx-xxxx-XXX)</description>
        <inlineHelpText>Last 3 digits of the GL Account Full number (xxxx-xxx-xxxx-XXX)</inlineHelpText>
        <label>Project</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GL Account</label>
    <listViews>
        <fullName>All_1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Dist_Codes</fullName>
        <columns>NAME</columns>
        <columns>Distribution_GL_Mapping__c</columns>
        <columns>Distribution_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Distribution_Code__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Distribution Codes</label>
    </listViews>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>OrderApi__Report_Category__c</columns>
        <columns>OrderApi__Type__c</columns>
        <columns>OrderApi__Detail__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>4070</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>